--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,8 +1,7 @@
 {
   "packageDirectories": [
     {
-      "path": "force-app",
-      "release":"Preview",
+      "path": "force-app"
       "default": true
     }
   ],
